# sspa3

./: .gitignore  1a.txt  1b.txt  1c.txt  1d.txt  1e.txt  2a.txt  2b.txt  2c.txt  2d.txt  2e.txt  BinaryTree.cpp  BinaryTree.h  BinaryTreeTest.cpp  CMakeLists.txt  Makefile  README.md  SETUP.md  balance_factors.tsv  create_submission_zip.sh  tree.nwk
